--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
 --color-accent-soc:#31D0AA; 
 --color-accent-customers:#8E8F99;
 --hover-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+--modal-background: rgba(46, 47, 66, 0.4);
 }
  
 p,h1,h2,h3,h4,h5,h6{
@@ -238,7 +238,28 @@ transition: background-color var(--hover-transition);
 
   
 }
- 
+.backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color:var(--modal-background);
+}
+.backdrop.is-hidden{
+opacity: 0;
+pointer-events: none;
+}
+ .modal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  height: 400px;
+  width: 400px;
+  background-color: #FFFF;
+  
+ }
 .features-title {
   line-height: 1.2;
   font-weight: 500;
