--- a/css/styles.css
+++ b/css/styles.css
@@ -113,8 +113,9 @@ body {
 .header-item {
   
 }
-.active::after {
-   content: "";
+.active::after{
+
+  content: "";
   width: 100%;
   height: 4px;
   left: 0;
@@ -124,8 +125,8 @@ body {
   border-radius: 2px;
   transition: var(--color-accent);
   margin-top: 24px;
- 
 
+  
   
 }
 .header-link {
@@ -241,24 +242,50 @@ transition: background-color var(--hover-transition);
 .backdrop{
   position: fixed;
   top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
-  background-color:var(--modal-background);
+  background: rgba(46, 47, 66, 0.4);
+  transition: opacity var(--hover-transition),
+    visibility var(--hover-transition);
 }
-.backdrop.is-hidden{
+.is-hidden{
 opacity: 0;
 pointer-events: none;
+visibility: hidden;
 }
+.backdrop.is-hidden.modal {
+  transform: translate(-50%, -50%)  scale(0) ;
+}
+
+
  .modal{
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
-  height: 400px;
-  width: 400px;
-  background-color: #FFFF;
-  
+  transform: translate(-50%,-50%) scale(1)  ;
+  min-height: 576px;
+  width: 408px;
+  background-color: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform var(--hover-transition);
+ }
+ .modal-close{
+
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  padding: 0;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
  }
 .features-title {
   line-height: 1.2;
@@ -566,6 +593,35 @@ padding-right: 16px;
 .project-card-item:focus{
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+.project-overlay{
+  position: relative;
+  overflow: hidden;
+}
+
+  .main-link:is(:hover, :focus) .project-overlay-text {
+    transform: translateY(0);
+
+}
+.main-image{
+
+}
+.project-overlay-text{
+  color: #f4f4fd;
+  background-color: var(--color-logo);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding-top: 40px;
+  padding-left: 32px;
+  padding-right: 32px;
+  position: absolute;
+  top: 0;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform var(--hover-transition);
+}
+
 .project-card-list>li:nth-child(3n) {
   margin-right: 0;
 }
@@ -586,6 +642,7 @@ padding-right: 16px;
   letter-spacing: 0.02em;
   color: var(--color-text-add);
 }
+
 
 /*---Footer --*/
 .box {
