--- a/css/styles.css
+++ b/css/styles.css
@@ -116,11 +116,11 @@ body {
 .active::after{
 content: "";
 display: block;
-position: absolute;
+position: relative;
 width: 100%;
 height: 4px;
 left: 0;
-bottom: -29px;
+bottom: -25px;
 border-radius: 2px;
   background-color: var(--color-accent);
  
